# top-down-mg-parser

./: README.md  cabal.project  default.nix  lexicon.txt  shell.nix  top-down-mg-parser.cabal
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Exprs.hs  GornTrees.hs  Lexer.hs  MG_parser.hs  Main.hs  Read_lexicon.hs
