name:                top-down-mg-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/juliangrove/top-down-mg-parser#readme
author:              Julian Grove
maintainer:          julian.grove@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable top-down-mg-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , mtl
  other-modules:       Exprs
                     , GornTrees
                     , Lexer
                     , MG_parser
                     , Read_lexicon
